--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,31 @@
-name: Deploy Portfolio Website
+# This is a basic workflow to help you get started with Actions
 
+name: Deploy static content to pages
+
+# Controls when the workflow will run
 on:
-  # Runs on pushes targeting the default branch
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# Allow one concurrent deployment
 concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  group: 'pages'
+  cancel-in-progress: true
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   deploy:
     environment:
@@ -29,29 +33,23 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo code
+      - name: Checkout
         uses: actions/checkout@v3
-        
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: 'npm'
-        
-      - name: Install project dependencies
+      - name: Install dependencies
         run: npm install
-        
-      - name: Build project
+      - name: Build
         run: npm run build
-        
-      - name: Setup gh-pages
+      - name: Setup Pages
         uses: actions/configure-pages@v3
-        
-      - name: Upload artifact to gh-pages
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: './dist'
-          
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
