--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://youx24.github.io/youx.github.io/",
+  "homepage": "https://youx24.github.io/youx.github.io",
   "name": "youx.github.io",
   "private": true,
   "version": "0.0.0",
