--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://youx24.github.io/youx.github.io",
-  "name": "youx-github-io",
+  "name": "youx.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
