--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,5 +41,11 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Set identification
+        shell: bash
+        run: |
+          git config --global user.email ${{ secrets.USER_EMAIL }}
+          git config --global user.email ${{ secrets.USER_NAME }}
+
       - name: Deploy
         run: npm run deploy
